# STalker

./: .STester.py.kate-swp  .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  ConfigurationFrame.py  LaunchMe.sh  README.md  ROSTester.py  STester.py  Tester.py  envVarsExporter.sh  netcatLogListener
Docs/: IncomingFrameExamples  goodResponse
Documents/UML's/: LoggerStructure.xmi  STInterface.xmi  UpstreamData.xmi
STalkerExampleApplication/: .directory  CMakeLists.txt
STalkerExampleApplication/src/: main.cpp
STalkerLibrary/: CMakeLists.txt
STalkerLibrary/include/: STalkerLibraryInterface.h
STalkerLibrary/src/DataExchanged/: DataToSend.h  DownstreamDataType.h  ExpectedDataType.h  UpstreamDataType.cpp  UpstreamDataType.h
STalkerLibrary/src/DataExchanged/DataToSend/: IMUFrame.cpp  IMUFrame.h  MainConfigurationFrame.cpp  MainConfigurationFrame.h  MovementFrame.cpp  MovementFrame.h  TimerConfigurationFrame.cpp  TimerConfigurationFrame.h
STalkerLibrary/src/DataExchanged/DownstreamData/: AccelerometerFrame.cpp  AccelerometerFrame.h  ElectromagnesFrame.cpp  ElectromagnesFrame.h  GyroscopeFrame.cpp  GyroscopeFrame.h  IMUFrame.cpp  IMUFrame.h  MagnetometerFrame.cpp  MagnetometerFrame.h  MainConfigurationFrame.cpp  MainConfigurationFrame.h  MovementFrame.cpp  MovementFrame.h  MovementFrameLeftRight.cpp  MovementFrameLeftRight.h  MovementFrameTurnPropulsion.cpp  MovementFrameTurnPropulsion.h  MovementOrderLeftRightFrame.cpp  MovementOrderLeftRightFrame.h  MovementOrderTurnPropulsionFrame.cpp  MovementOrderTurnPropulsionFrame.h  MovementOrderTurnPropulsionFrame.h.autosave  TimerConfigurationFrame.cpp  TimerConfigurationFrame.h
STalkerLibrary/src/DataExchanged/ExpectedDataTypes/: AccelerometerFrame.cpp  AccelerometerFrame.h  EncoderFrame.cpp  EncoderFrame.h  GPSFrame.cpp  GPSFrame.h  GyroscopeFrame.cpp  GyroscopeFrame.h  MagnetometerFrame.cpp  MagnetometerFrame.h  PWMFrame.cpp  PWMFrame.h  TimersFrame.cpp  TimersFrame.h
STalkerLibrary/src/DataExchanged/UpstreamData/: AccelerometerFrame.cpp  AccelerometerFrame.h  ContinentalLIDARDistanceFrame.cpp  ContinentalLIDARDistanceFrame.h  ContinentalLIDARReflectionFrame.cpp  ContinentalLIDARReflectionFrame.h  ContinentalLIDARSpeedFrame.cpp  ContinentalLIDARSpeedFrame.h  EncoderFrame.cpp  EncoderFrame.h  GPSFrame.cpp  GPSFrame.h  GyroscopeFrame.cpp  GyroscopeFrame.h  LidarFrame.cpp  LidarFrame.h  MagnetometerFrame.cpp  MagnetometerFrame.cpp.autosave  MagnetometerFrame.h  MovementInformationLeftRightFrame.cpp  MovementInformationLeftRightFrame.h  MovementInformationTurnPropulsionFrame.cpp  MovementInformationTurnPropulsionFrame.h  PWMFrame.cpp  PWMFrame.h  PackageStatisticsFrame.cpp  PackageStatisticsFrame.h  RFIDFrame.cpp  RFIDFrame.h  ServiceTimeFrame.cpp  ServiceTimeFrame.h  TimeSyncFrame.cpp  TimeSyncFrame.h  TimersFrame.cpp  TimersFrame.h  UltraSoundFrame.cpp  UltraSoundFrame.h
STalkerLibrary/src/Logger/: Logger.cpp  Logger.h  LoggerGlobals.h  LoggingInterface.cpp  LoggingInterface.h
STalkerLibrary/src/Logger/LoggingInterfaces/: FileLogger.cpp  FileLogger.h  TCPLogger.cpp  TCPLogger.h  TerminalLogger.cpp  TerminalLogger.h
STalkerLibrary/src/ROSInterface/: ROSInterfaceClient.cpp  ROSInterfaceClient.h
STalkerLibrary/src/STInterface/: DataToSend.cpp  DataToSend.h  ExpectedDataType.cpp  ExpectedDataType.h  STInterfaceClient.cpp  STInterfaceClient.h  STInterfaceClientTCP.cpp  STInterfaceClientTCP.h  STInterfaceClientUDP.cpp  STInterfaceClientUDP.h  Session.cpp  Session.cpp.autosave  Session.h
STalkerLibrary/src/STInterface/DataToSend/: IMUFrame.cpp  IMUFrame.h  MainConfigurationFrame.cpp  MainConfigurationFrame.h  MovementFrame.cpp  MovementFrame.h  TimerConfigurationFrame.cpp  TimerConfigurationFrame.h
STalkerLibrary/src/STInterface/ExpectedDataTypes/: AccelerometerFrame.cpp  AccelerometerFrame.h  EncoderFrame.cpp  EncoderFrame.h  GPSFrame.cpp  GPSFrame.h  GyroscopeFrame.cpp  GyroscopeFrame.h  MagnetometerFrame.cpp  MagnetometerFrame.h  PWMFrame.cpp  PWMFrame.h  TimersFrame.cpp  TimersFrame.h
